# rust-tensorflow-serving2

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: async.rs  classification.rs  model_info.rs  prediction.rs
serving/: .gitignore  fetch.sh  rundocker.sh
src/: lib.rs  main.rs
