[package]
name = "tensorflow-serving"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.0", features = ["prost"] }
bytes = "0.4.12"
prost = "0.6.0"
prost-derive = "0.6.0"
failure = "0.1.5"
prost-types = "0.6.0"
image = "0.22.3"

[build-dependencies]
tonic-build = "0.1.0"
walkdir = "2.2.9"

[dev-dependencies]
structopt = "0.3.3"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.1"
futures = "0.3.1"
